# inv-track

./: .env  .gitignore  README.md  docker-compose.yml  heroku.yml  integration-test.yml  optimized.yml  production.yml  ui-production.yml  ui.yml
app-ui/: Dockerfile  README.md  package-lock.json  package.json
app-ui/src/: App.vue
app-ui/src/components/: ItemChange.vue  ItemData.vue  ItemList.vue  ItemsList.vue  LocationChange.vue  LocationData.vue  LocationsList.vue  NavBar.vue  TransactionChange.vue  TransactionData.vue  TransactionsList.vue
app-ui/src/router/: index.js
app-ui/src/views/: HomePage.vue  ItemPage.vue  ItemsPage.vue  LocationPage.vue  LocationsPage.vue  TransactionPage.vue  TransactionsPage.vue
heroku-redis/: Dockerfile
server/: Cargo.toml  Dockerfile  Dockerfile.production  start.sh
server/migrations/: 20220113052441_create_items.up.sql  20220113052452_create_locations.up.sql  20220113052458_create_transactions.up.sql
server/src/: db.rs  error.rs  main.rs  store.rs
server/src/batcher/: id_loader.rs  mod.rs
server/src/dataloader/: mod.rs
server/src/graphql/: mod.rs  mutation.rs  query.rs  subscription.rs
server/src/model/: README.md  item.rs  location.rs  mod.rs  modification.rs  transaction.rs  validation.rs
