[package]
name = "inv-track"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.19"
anymap = "0.12.1"
async-trait = "0.1.52"
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.133"
serde_json = "1.0.74"
sqlx = { version = "0.5.10",  features = ["runtime-actix-native-tls", "postgres", "chrono"] }
validator = { version = "0.14.0", features = ["derive"] }
juniper = "0.15.7"
juniper_actix = { version = "0.4.0", features = ["subscriptions"] }
juniper_graphql_ws = "0.3.0"
redis = { version = "0.21.5", features = ["tokio-comp", "aio"] }
dataloader = "0.14.0"
derive_more = "0.99.17"

[dev-dependencies]
actix-rt = "2.6.0"
futures = "0.3.19"