[package]
name = "inv-track"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
async-graphql = { version = "5.0.5", features = ["chrono"] }
async-graphql-actix-web = "5.0.5"
anymap2 = "0.13.0"
async-trait = "0.1.60"
chrono = { version = "0.4.23", features = ["serde"] }
serde = "1.0.152"
serde_json = "1.0.91"
sqlx = { version = "0.5.10",  features = ["runtime-actix-native-tls", "postgres", "chrono", "offline"] }
tokio-stream = "0.1.11"
futures = "0.3.25"
redis = { version = "0.22.1", features = ["tokio-comp", "aio"] }
dataloader = "0.16.0"
derive_more = "0.99.17"

[dev-dependencies]
actix-rt = "2.7.0"
